# synth-formula-evaluator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: SynthFormulaEvaluator.h
src/: Evaluator.cpp  Parser.cpp
test/: eval.cpp  main.cpp  simple.cpp
util/: sfe_repl.cpp
